# AI_robotic_residence_stuff

./: tarefas.csv  tarefas.json
basic_python/2025-08-04/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py
basic_python/2025-08-05/: 03.py  04.py  05.py  06.py  07.py  08.py  09.py  1.py  10.py  2.py
basic_python/2025-08-06/: 01.py  02.py  03.py  04.py  05.py  06.py
basic_python/2025-08-07/: 01.py  02.py
fabric/workshop/flutter/flutter_project_test/api/: main.py  pyproject.toml
fabric/workshop/flutter/flutter_project_test/api/movies/: create_movie.py  create_user.py  models.py
fabric/workshop/flutter/flutter_project_test/api/movies/protos/: packages.proto  packages.py
fabric/workshop/pytest/: pyproject.toml
fabric/workshop/pytest/tests/: test_hello.py
fabric/workshop/pytest/workshop_pytest/: hello.py
fabric/workshop/pytest/workshop_pytest/my_own_test/: soma.py
oo_python/: notebook.ipynb
oo_python/2025-08-18/: 01_recursao.py  02_arquivos.py  03_maior.py  04_notas.py  05_estoque.py  numeros.txt  text01.txt
oo_python/2025-08-21/: 01-sys.py  01_sys.py  02-args.py  03-soma-dois.py  03-soma-n.py  04-arquivo.py  04-teste.txt  05-conversor.py  06-oop.py  07-classes.py  08-magic.py  conversao.py  dunder_methods.ipynb  fila.py  filme.py
oo_python/2025-08-22/: 01-classes.py  02-teste.py  04-heranca.py  array.py  vetor.py
oo_python/2025-08-25/: 01-heranca.py  02-abstrato.py  03-empregados_copy.py  04-composicao.py  05-biblioteca.py  06-pizzaria.py  (+8 more)
requisitos_sistemas/: book.ipynb
robot_programing/: exercise1.py  move_3d.py
(+189 files in other folders)
