[project]
name = "workshop_pytest"
version = "0.1.0"
description = ""
authors = [
    {name = "Everthon Manoel",email = "everthonmanoell@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "coverage (>=7.10.6,<8.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.poetry]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
    "marcado",
    "skip",
    "skipif",
    "xfail"
    "parametrize"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
