[project]
name = "movies"
version = "0.1.0"
description = ""
authors = [
    {name = "jefferson-norberto2",email = "jmn@cin.ufpe.br"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "betterproto[compiler] (>=1.2.5,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
